--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Press+Start+2P&family=VT323&display=swap');
+@import url('https://fonts.cdnfonts.com/css/agustina');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +15,127 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#phaser-container {
+  overflow: hidden;
+}
+
+.press-start-2p-regular {
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.logo-name {
+  font-family: 'Agustina', sans-serif;
+  font-weight: 500;
+  font-size: x-large;
+}
+
+#resume {
+  display: flex;
+  padding-top: 66px;
+  padding-left: 0px;
+}
+
+#info {
+  border: 0.1px solid rgb(40, 40, 43);
+  border-radius: 10px;
+  background-color: rgb(30, 30, 33);
+  margin: 50px;
+  margin-left: 30px;
+  margin-right: 20px;
+  max-height: 80vh;
+  min-width: 40vh;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.9);
+  transition: all 0.3s ease-in-out;
+}
+
+#info::after {
+  border: 0.1px solid rgb(40, 40, 43);
+  border-radius: 10px;
+  background-color: rgb(30, 30, 33);
+  margin: 50px;
+  margin-left: 30px;
+  margin-right: 20px;
+  max-height: 80vh;
+  min-width: 40vh;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.9);
+  transition: opacity 0.3s ease-in-out;
+}
+
+
+#content {
+  border: 0.1px solid rgb(40, 40, 43);
+  border-radius: 10px;
+  background-color: rgb(30, 30, 33);
+  margin: 50px;
+  margin-left: 20px;
+  max-height: 80vh;
+  min-width: 120vh;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.9);
+  transition: all 0.3s ease-in-out;
+}
+
+#content::after {
+  border: 0.1px solid rgb(40, 40, 43);
+  border-radius: 10px;
+  background-color: rgb(30, 30, 33);
+  margin: 50px;
+  margin-left: 20px;
+  max-height: 80vh;
+  min-width: 120vh;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.9);
+  transition: all 0.3s ease-in-out;
+}
+
+/* #content:hover {
+  -webkit-transform: scale(1.05, 1.05);
+  transform: scale(1.05, 1.05);
+}
+
+#content:hover::after {
+  opacity: 1;
+}
+
+#info:hover {
+  -webkit-transform: scale(1.05, 1.05);
+  transform: scale(1.05, 1.05);
+}
+
+#info:hover::after {
+  opacity: 1;
+} */
+
+/* .trial {
+  border: 0.1px solid rgb(40, 40, 43);
+  border-radius: 10px;
+  background-color: rgb(30, 30, 33);
+  margin: 50px;
+  margin-left: 20px;
+  max-height: 80vh;
+  min-width: 80vh;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.9);
+  transition: all 0.3s ease-in-out;
+  animation: slidein 0.5s forwards;
+}
+
+.trial::after {
+  border: 0.1px solid rgb(40, 40, 43);
+  border-radius: 10px;
+  background-color: rgb(30, 30, 33);
+  margin: 50px;
+  margin-left: 20px;
+  max-height: 80vh;
+  min-width: 80vh;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.9);
+  transition: all 0.3s ease-in-out;
+}
+.trial:active {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.trial:active::after {
+  opacity: 1;
+} */
